--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ html {
   .project-grid {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     justify-content: center;
     align-items: center;
@@ -263,4 +263,13 @@ html {
     h2 {
         font-size: 2.4rem;
       }
+
+    p {
+        font-size: 1.6rem;
+      }
+      
+    .project-grid {
+      grid-template-columns: repeat(1, 1fr);
+    }
+
   }
